[gd_scene load_steps=5 format=3 uid="uid://yc1nb5u6lk3p"]

[ext_resource type="Script" path="res://entities/enemy_entity/base_enemy/base_enemy.gd" id="1_3qp1w"]
[ext_resource type="Script" path="res://states/state_machine.gd" id="2_c3efm"]
[ext_resource type="Script" path="res://states/enemy_idle.gd" id="2_dokf5"]
[ext_resource type="Script" path="res://states/enemy_follow.gd" id="3_g1pu1"]

[node name="BaseEnemy" type="CharacterBody2D" node_paths=PackedStringArray("animation_player", "sprite_2d", "area_2d") groups=["enemy"]]
collision_layer = 16
collision_mask = 15
script = ExtResource("1_3qp1w")
animation_player = NodePath("AnimationPlayer")
sprite_2d = NodePath("Sprite2D")
area_2d = NodePath("Area2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708

[node name="PolygonCollisionShape2D" type="CollisionPolygon2D" parent="."]

[node name="HitBox2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 28

[node name="PolygonHitBoxShape2D" type="CollisionPolygon2D" parent="HitBox2D"]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="AreaShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_c3efm")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("2_dokf5")
enemy = NodePath("../..")
move_speed = 100.0

[node name="Follow" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("3_g1pu1")
enemy = NodePath("../..")
move_speed = 200.0

[connection signal="body_entered" from="HitBox2D" to="." method="_on_hit_box_2d_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
